# db_thing

./: .dockerignore  .gitignore  be-Dockerfile  dbthing.service  docker-compose.yml  nginx-Dockerfile  nginx-default.conf  remote_sync  run  sync
be/: Cargo.toml
be/src/: conf.rs  errors.rs  main.rs  migration.rs  sql_to_json.rs
fe/: 50x.html  admin.html  index.html  view.html
