[package]
name = "be"
version = "0.1.0"
authors = ["Giles Edkins <edkins@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-web = "3"
derive_more = "0.99.11"
serde = "1.0.117"
serde_json = "1.0.59"
async-postgres = {version="0.5.1", features=["with-serde_json-1"]}
tokio-postgres = {version="0.5.5", features=["with-serde_json-1"]}
